slider ve contact eklenmesi

--- a/CoffyWebUI/Views/_ViewImports.cshtml
+++ b/CoffyWebUI/Views/_ViewImports.cshtml
@@ -9,6 +9,7 @@
 @using CoffyWebUI.Dtos.FeatureDtos
 @using CoffyWebUI.Dtos.SocialMediaDtos
 @using CoffyWebUI.Dtos.TestimonialDtos
+@using CoffyWebUI.Dtos.SliderDtos
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
