--- a/CoffyWebUI/Views/Statistic/Index.cshtml
+++ b/CoffyWebUI/Views/Statistic/Index.cshtml
@@ -43,6 +43,33 @@
 				connection.on("ReceiveProductCountByCategoryNameDrink", (value6) => {
 					$("#productcountbycategorynamedrink").text(value6);
 				});
+				connection.on("ReceiveProductPriceAvg", (value7) => {
+					$("#productpriceavg").text(value7);
+				});
+				connection.on("ReceiveProductNameByMaxPrice", (value8) => {
+					$("#productnamebymaxprice").text(value8);
+				});
+				connection.on("ReceiveProductNameByMinPrice", (value9) => {
+					$("#productnamebyminprice").text(value9);
+				});
+				connection.on("ReceiveProductAvgPriceByMakarna", (value10) => {
+					$("#productavgpricebymakarna").text(value10);
+				});
+				connection.on("ReceiveTotalOrderCount", (value11) => {
+					$("#totalordercount").text(value11);
+				});
+				connection.on("ReceiveActiveOrderCount", (value12) => {
+					$("#activeordercount").text(value12);
+				});
+				connection.on("ReceiveLastOrderPrice", (value13) => {
+					$("#lastorderprice").text(value13);
+				});
+				connection.on("ReceiveTotalMoneyCaseAmount", (value14) => {
+					$("#totalmoneycaseamount").text(value14);
+				});
+				connection.on("ReceiveMenuTableCount", (value16) => {
+					$("#menutablecount").text(value16);
+				});
 			});
 
 		</script>
@@ -174,13 +201,13 @@
 						<div class="row">
 							<div class="col-5">
 								<div class="icon-big text-center">
-									<i class="la la-newspaper-o"></i>
+									<i class="la la-money"></i>
 								</div>
 							</div>
 							<div class="col-7 d-flex align-items-center">
 								<div class="numbers">
-									<p class="card-category">Subscribers</p>
-									<h4 class="card-title">1303</h4>
+									<p class="card-category">Ortalama fiyat</p>
+									<h4 class="card-title" id="productpriceavg"></h4>
 								</div>
 							</div>
 						</div>
@@ -193,13 +220,13 @@
 						<div class="row">
 							<div class="col-5">
 								<div class="icon-big text-center">
-									<i class="la la-check-circle"></i>
+									<i class="la la-star"></i>
 								</div>
 							</div>
 							<div class="col-7 d-flex align-items-center">
 								<div class="numbers">
-									<p class="card-category">Order</p>
-									<h4 class="card-title">576</h4>
+									<p class="card-category">En Pahalı Ürün</p>
+									<h4 class="card-title" id="productnamebymaxprice"></h4>
 								</div>
 							</div>
 						</div>
@@ -217,13 +244,13 @@
 						<div class="row">
 							<div class="col-5">
 								<div class="icon-big text-center">
-									<i class="la la-users"></i>
+									<i class="la la-tripadvisor"></i>
 								</div>
 							</div>
 							<div class="col-7 d-flex align-items-center">
 								<div class="numbers">
-									<p class="card-category">Visitors</p>
-									<h4 class="card-title">1,294</h4>
+									<p class="card-category">En Ucuz ürün</p>
+									<h4 class="card-title" id="productnamebyminprice" ></h4>
 								</div>
 							</div>
 						</div>
@@ -241,8 +268,8 @@
 							</div>
 							<div class="col-7 d-flex align-items-center">
 								<div class="numbers">
-									<p class="card-category">Sales</p>
-									<h4 class="card-title">$ 1,345</h4>
+									<p class="card-category">Ortalama Makarna </p>
+									<h4 class="card-title" id="productavgpricebymakarna"></h4>
 								</div>
 							</div>
 						</div>
@@ -255,13 +282,13 @@
 						<div class="row">
 							<div class="col-5">
 								<div class="icon-big text-center">
-									<i class="la la-newspaper-o"></i>
+									<i class="la la-list-ol"></i>
 								</div>
 							</div>
 							<div class="col-7 d-flex align-items-center">
 								<div class="numbers">
-									<p class="card-category">Subscribers</p>
-									<h4 class="card-title">1303</h4>
+									<p class="card-category">Toplam Sipariş</p>
+									<h4 class="card-title" id="totalordercount"></h4>
 								</div>
 							</div>
 						</div>
@@ -274,13 +301,13 @@
 						<div class="row">
 							<div class="col-5">
 								<div class="icon-big text-center">
-									<i class="la la-check-circle"></i>
+									<i class="la la-heart"></i>
 								</div>
 							</div>
 							<div class="col-7 d-flex align-items-center">
 								<div class="numbers">
-									<p class="card-category">Order</p>
-									<h4 class="card-title">576</h4>
+									<p class="card-category">Aktif Sipariş</p>
+									<h4 class="card-title" id="activeordercount"></h4>
 								</div>
 							</div>
 						</div>
@@ -298,13 +325,13 @@
 						<div class="row">
 							<div class="col-5">
 								<div class="icon-big text-center">
-									<i class="la la-users"></i>
+									<i class="la la-beer"></i>
 								</div>
 							</div>
 							<div class="col-7 d-flex align-items-center">
 								<div class="numbers">
-									<p class="card-category">Visitors</p>
-									<h4 class="card-title">1,294</h4>
+									<p class="card-category">Son Sipariş</p>
+									<h4 class="card-title" id="lastorderprice"></h4>
 								</div>
 							</div>
 						</div>
@@ -317,13 +344,13 @@
 						<div class="row">
 							<div class="col-5">
 								<div class="icon-big text-center">
-									<i class="la la-bar-chart"></i>
+									<i class="la la-bank"></i>
 								</div>
 							</div>
 							<div class="col-7 d-flex align-items-center">
 								<div class="numbers">
-									<p class="card-category">Sales</p>
-									<h4 class="card-title">$ 1,345</h4>
+									<p class="card-category">Kasadaki Tutar</p>
+									<h4 class="card-title" id="totalmoneycaseamount"></h4>
 								</div>
 							</div>
 						</div>
@@ -336,13 +363,13 @@
 						<div class="row">
 							<div class="col-5">
 								<div class="icon-big text-center">
-									<i class="la la-newspaper-o"></i>
+									<i class="la la-cutlery"></i>
 								</div>
 							</div>
 							<div class="col-7 d-flex align-items-center">
 								<div class="numbers">
-									<p class="card-category">Subscribers</p>
-									<h4 class="card-title">1303</h4>
+									<p class="card-category">Bugünkü kazanç</p>
+									<h4 class="card-title">125.45₺</h4>
 								</div>
 							</div>
 						</div>
@@ -355,13 +382,13 @@
 						<div class="row">
 							<div class="col-5">
 								<div class="icon-big text-center">
-									<i class="la la-check-circle"></i>
+									<i class="la la-home"></i>
 								</div>
 							</div>
 							<div class="col-7 d-flex align-items-center">
 								<div class="numbers">
-									<p class="card-category">Order</p>
-									<h4 class="card-title">576</h4>
+									<p class="card-category">Masa Sayısı</p>
+									<h4 class="card-title" id="menutablecount"></h4>
 								</div>
 							</div>
 						</div>
