--- a/CoffyWebUI/Views/Baskets/Index.cshtml
+++ b/CoffyWebUI/Views/Baskets/Index.cshtml
@@ -2,6 +2,9 @@
 @{
     Layout = null;
     int count = 0;
+    decimal basketTotalPrice=0;
+    decimal basketTotalPriceWithTax = 0;
+    decimal tax = 0;
 }
 
 
@@ -43,6 +46,9 @@
                     </thead>
                     @foreach(var item in Model)
                     {
+                        basketTotalPrice = Model.Sum(x => x.Price);
+                        tax = basketTotalPrice / 100 * 10;
+                        basketTotalPriceWithTax = basketTotalPrice + tax;
                         count++;
                         <tbody class="align-middle">
                             <tr>
@@ -66,6 +72,29 @@
                         </div>
                     </div>
                 </form>
+                <br />
+                <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-warning pr-3">Sepet Özeti</span></h5>
+                <div class="bg-light p-30 mb-5">
+                    <div id="container" class="border-bottom pb-2">
+                        <div class="d-flex justify-content-between mb-3">
+                            <h6>Toplam Tutar</h6>
+                            <h6><span id="totalprice">@basketTotalPrice</span>₺</h6>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <h6 class="font-weight-medium">Kdv Oranı</h6>
+                            <h6 id="kdv" class="font-weight-medium">@tax</>₺</h6>
+                        </div>
+                        <br />
+                    </div>
+                    <div class="pt-2">
+                        <div class="d-flex justify-content-between mt-2">
+                            <h5>Toplam Tutar</h5>
+                            <h5><span id="totalpricewithkdv">@basketTotalPriceWithTax</span>₺</h5>
+                        </div>
+                        <br />
+                        <button id="btnchecked" class="btn btn-block btn-warning font-weight-bold my-3">Siparişi Tamamla</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
