--- a/CoffyWebUI/Views/Menu/Index.cshtml
+++ b/CoffyWebUI/Views/Menu/Index.cshtml
@@ -135,16 +135,19 @@
 
     <script>
         function showproductid(value){
-               var id= value; $.ajax({
+               var id= value; 
+               $.ajax({
                    type:'post',
-                   data: {item:id},
+                   data: {item: id},
+                   url:"/Menu/AddBasket/" + id,
                    contentType:'json',
                    success: function () {
                            swal("Seçilen Ürün ID:" + id, "Seçtiğiniz Ürün Sepete Eklendi!", "success");
 
                    }
                });
-           }
+        }
+
     </script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
