--- a/CoffyWebUI/Views/_ViewImports.cshtml
+++ b/CoffyWebUI/Views/_ViewImports.cshtml
@@ -11,6 +11,6 @@
 @using CoffyWebUI.Dtos.TestimonialDtos
 @using CoffyWebUI.Dtos.SliderDtos
 @using CoffyWebUI.Dtos.BasketDtos
-
+@using CoffyWebUI.Dtos.NotificationDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
