menu table eklentileri
controller düzenlemeleri.
masa dolu boş gösterimi.
admin tarafından masa ekleme silme güncelleme

--- a/CoffyWebUI/Views/_ViewImports.cshtml
+++ b/CoffyWebUI/Views/_ViewImports.cshtml
@@ -12,5 +12,6 @@
 @using CoffyWebUI.Dtos.SliderDtos
 @using CoffyWebUI.Dtos.BasketDtos
 @using CoffyWebUI.Dtos.NotificationDtos
+@using CoffyWebUI.Dtos.MenuTableDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
