--- a/CoffyWebUI/Views/_ViewImports.cshtml
+++ b/CoffyWebUI/Views/_ViewImports.cshtml
@@ -13,5 +13,6 @@
 @using CoffyWebUI.Dtos.BasketDtos
 @using CoffyWebUI.Dtos.NotificationDtos
 @using CoffyWebUI.Dtos.MenuTableDtos
+@using CoffyWebUI.Dtos.IdentityDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
