--- a/CoffyWebUI/Views/Product/CreateProduct.cshtml
+++ b/CoffyWebUI/Views/Product/CreateProduct.cshtml
@@ -38,7 +38,7 @@
 						<div class="card-body">
 							<div class="form-group">
 								<label for="price">Ürün kategorisini seçiniz</label>
-								@Html.DropDownListFor(x => x.CategoryID, (List<SelectListItem>)ViewBag.v, new { @class = "form-control" }))
+								@Html.DropDownListFor(x => x.CategoryID, (List<SelectListItem>)ViewBag.v, new { @class = "form-control" })
 							</div>
 						</div>
 						<div class="card-body">
@@ -46,6 +46,17 @@
 								<label for="description">Ürün açıklamasını Giriniz</label>
 								<input type="text" class="form-control" asp-for="Description" id="description">
 							</div>
+						</div>
+						<div class="form-group">
+							<label for="productstatus"></label>
+							<input type="checkbox"
+								   asp-for="ProductStatus"
+								   data-toggle="toggle"
+								   data-on="Aktif"
+								   data-off="Pasif"
+								   data-onstyle="success"
+								   data-offstyle="danger"
+								   data-style="btn-round">
 						</div>
 						<div class="card-action">
 							<button class="btn btn-primary">ürünü ekle</button>
