--- a/CoffyWebUI/Views/Product/Index.cshtml
+++ b/CoffyWebUI/Views/Product/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@model List<ResultProductDto>
 
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Views/AdminLayout/Index.cshtml";
+	ViewData["Title"] = "Index";
+	Layout = "~/Views/AdminLayout/Index.cshtml";
+	int count = 0;
 }
 
 
@@ -34,14 +35,24 @@
 							<tbody>
 								@foreach (var item in Model)
 								{
+									count++;
 									<tr>
-										<td>@item.ProductID</td>
+										<th>@count</th>
 										<td>@item.ProductName</td>
 										<td>@item.Price</td>
 										<td>@item.CategoryName</td>
-										<td>@item.ProductStatus</td>
-										<td><a href="/Product/DeleteProduct/@item.ProductID" class=btn btn-outline-danger>Sil</a></td>
-										<td><a href="/Product/UpdateProduct/@item.ProductID" class=btn btn-outline-success>Güncelle</a></td>
+										<td>
+											@if (item.ProductStatus)
+											{
+												<span class="badge badge-success">Aktif</span>
+											}
+											else
+											{
+												<span class="badge badge-danger">Pasif</span>
+											}
+										</td>
+										<td><a href="/Product/DeleteProduct/@item.ProductID" class="btn btn-outline-danger">Sil</a></td>
+										<td><a href="/Product/UpdateProduct/@item.ProductID" class="btn btn-outline-success">Güncelle</a></td>
 									</tr>
 								}
 
