--- a/CoffyWebUI/Views/Booking/UpdateBooking.cshtml
+++ b/CoffyWebUI/Views/Booking/UpdateBooking.cshtml
@@ -15,6 +15,7 @@
 						<div class="card-header">
 							<div class="card-title">Yeni Rezervasyon giriniz</div>
 						</div>
+						<input type="hidden" asp-for="Description" />
 						<input type="hidden" asp-for="BookingID" /> 
 						<div class="card-body">
 							<div class="form-group">
