indirim kısmı revize

--- a/CoffyWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/CoffyWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -92,7 +92,7 @@
 							</a>
 						</li>
 					</ul>
-
+					</div>
 			</li>
 			<li class="nav-item">
 				<a href="/About/Index/">
@@ -101,16 +101,8 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
-					<i class="la la-fonticons"></i>
-					<p>Mesajlar</p>
-					<span class="badge badge-count">0</span>
-
-				</a>
-			</li>
-			<li class="nav-item">
 				<a href="/Discount/Index">
-					<i class="la la-fonticons"></i>
+					<i class="la la-money"></i>
 					<p>İndirimler</p>
 				</a>
 			</li>
