--- a/CoffyWebUI/Views/Contact/Index.cshtml
+++ b/CoffyWebUI/Views/Contact/Index.cshtml
@@ -15,12 +15,11 @@
 					</div>
 					<div class="card-body">
 						<div class="card-sub">
-							İletişim alanı ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz . tema bütünlüğü için sadece 1 tane iletişim alanı oluşturun.
+							İletişim alanı ile ilgili işlemleri aşağıdan gerçekleştirebilirsiniz.<strong>Tema bütünlüğü için sadece 1 tane iletişim alanı oluşturun.</strong>
 						</div>
 						<table class="table mt-3">
 							<thead>
 								<tr>
-									<th scope="col">#</th>
 									<th scope="col">Konum</th>
 									<th scope="col">Telefon</th>
 									<th scope="col">Mail</th>
@@ -33,13 +32,12 @@
 								@foreach (var item in Model)
 								{
 									<tr>
-										<td>@item.ContactID</td>
 										<td>@item.Location</td>
 										<td>@item.PhoneNumber</td>
 										<td>@item.Mail</td>
 										<td>@item.FooterDescription</td>
-										<td><a href="/Contact/DeleteContact/@item.ContactID" class=btn btn-outline-danger>Sil</a></td>
-										<td><a href="/Contact/UpdateContact/@item.ContactID" class=btn btn-outline-success>Güncelle</a></td>
+										<td><a href="/Contact/DeleteContact/@item.ContactID" class="btn btn-outline-danger">Sil</a></td>
+										<td><a href="/Contact/UpdateContact/@item.ContactID" class="btn btn-outline-success">Güncelle</a></td>
 									</tr>
 								}
 
