--- a/CoffyWebUI/Views/Feature/Index.cshtml
+++ b/CoffyWebUI/Views/Feature/Index.cshtml
@@ -42,8 +42,8 @@
 										<td>@item.Description1</td>
 										<td>@item.Description2</td>
 										<td>@item.Description3</td>
-										<td><a href="/Feature/DeleteFeature/@item.FeatureID" class=btn btn-outline-danger>Sil</a></td>
-										<td><a href="/Feature/UpdateFeature/@item.FeatureID" class=btn btn-outline-success>Güncelle</a></td>
+										<td><a href="/Feature/DeleteFeature/@item.FeatureID" class="btn btn-outline-danger">Sil</a></td>
+										<td><a href="/Feature/UpdateFeature/@item.FeatureID" class="btn btn-outline-success">Güncelle</a></td>
 									</tr>
 								}
 
