--- a/CoffyWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/CoffyWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -113,8 +113,8 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="/Feature/Index">
-					<i class="la la-fonticons"></i>
+				<a href="/Slider/Index">
+					<i class="la la-bullhorn"></i>
 					<p>Öne Çıkanlar</p>
 				</a>
 			</li>
