--- a/CoffyWebUI/Views/Slider/CreateSlider.cshtml
+++ b/CoffyWebUI/Views/Slider/CreateSlider.cshtml
@@ -1,7 +1,7 @@
-﻿@model UpdateFeatureDto
+﻿@model CreateSliderDto
 
 @{
-	ViewData["Title"] = "UpdateFeature";
+	ViewData["Title"] = "CreateSlider";
 	Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
@@ -15,7 +15,6 @@
 						<div class="card-header">
 							<div class="card-title">Yeni öne çıkan alan giriniz</div>
 						</div>
-						<input type="hidden" asp-for="FeatureID" />
 						<div class="card-body">
 							<div class="form-group">
 								<label for="Title1">1.başlığı Giriniz</label>
@@ -53,7 +52,7 @@
 							</div>
 						</div>
 						<div class="card-action">
-							<button class="btn btn-primary">Öne çıkan alanını Güncelle</button>
+							<button class="btn btn-primary">Öne çıkan alanını ekle</button>
 						</div>
 					</div>
 				</form>
