--- a/CoffyWebUI/Views/Slider/Index.cshtml
+++ b/CoffyWebUI/Views/Slider/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ResultFeatureDto>
+﻿@model List<ResultSliderDto>
 @{
 	ViewData["Title"] = "Index";
 	Layout = "~/Views/AdminLayout/Index.cshtml";
@@ -19,37 +19,35 @@
 						</div>
 						<table class="table mt-3">
 							<thead>
-								<tr>
-									<th scope="col">#</th>
-									<th scope="col">Başlık 1</th>
-									<th scope="col">Başlık 2</th>
-									<th scope="col">Başlık 3</th>
-									<th scope="col">Açıklama 1</th>
-									<th scope="col">Açıklama 2</th>
-									<th scope="col">Açıklama 3</th>
-									<th scope="col">Sil</th>
-									<th scope="col">Güncelle</th>
+								<tr class="text-nowrap">
+									<th>Başlık 1</th>
+									<th>Başlık 2</th>
+									<th>Başlık 3</th>
+									<th>Açıklama 1</th>
+									<th>Açıklama 2</th>
+									<th>Açıklama 3</th>
+									<th>Sil</th>
+									<th>Güncelle</th>
 								</tr>
 							</thead>
 							<tbody>
 								@foreach (var item in Model)
 								{
 									<tr>
-										<td>@item.FeatureID</td>
 										<td>@item.Title1</td>
 										<td>@item.Title2</td>
 										<td>@item.Title3</td>
 										<td>@item.Description1</td>
 										<td>@item.Description2</td>
 										<td>@item.Description3</td>
-										<td><a href="/Feature/DeleteFeature/@item.FeatureID" class="btn btn-outline-danger">Sil</a></td>
-										<td><a href="/Feature/UpdateFeature/@item.FeatureID" class="btn btn-outline-success">Güncelle</a></td>
+										<td><a href="/Slider/DeleteSlider/@item.SliderID" class="btn btn-outline-danger">Sil</a></td>
+										<td><a href="/Slider/UpdateSlider/@item.SliderID" class="btn btn-outline-success">Güncelle</a></td>
 									</tr>
 								}
 
 							</tbody>
 						</table>
-						<a href="/Feature/CreateFeature" class="btn btn-outline-primary">Yeni öne çıkan alan girişi</a>
+						<a href="/Slider/CreateSlider" class="btn btn-outline-primary">Yeni öne çıkan alan girişi</a>
 					</div>
 				</div>
 			</div>
