--- a/CoffyWebUI/Views/Slider/UpdateSlider.cshtml
+++ b/CoffyWebUI/Views/Slider/UpdateSlider.cshtml
@@ -1,7 +1,7 @@
-﻿@model CreateFeatureDto
+﻿@model UpdateSliderdto
 
 @{
-	ViewData["Title"] = "CreateFeature";
+	ViewData["Title"] = "UpdateSlider";
 	Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
@@ -15,6 +15,7 @@
 						<div class="card-header">
 							<div class="card-title">Yeni öne çıkan alan giriniz</div>
 						</div>
+						<input type="hidden" asp-for="SliderID" />
 						<div class="card-body">
 							<div class="form-group">
 								<label for="Title1">1.başlığı Giriniz</label>
@@ -52,7 +53,7 @@
 							</div>
 						</div>
 						<div class="card-action">
-							<button class="btn btn-primary">Öne çıkan alanını ekle</button>
+							<button class="btn btn-primary">Öne çıkan alanını Güncelle</button>
 						</div>
 					</div>
 				</form>
