--- a/CoffyWebUI/Views/Shared/Components/_DefaultAboutComponentPartial/Default.cshtml
+++ b/CoffyWebUI/Views/Shared/Components/_DefaultAboutComponentPartial/Default.cshtml
@@ -2,7 +2,7 @@
 @foreach (var item in Model)
 {
 
-    <section class="about_section layout_padding">
+    <section id="about" class="about_section layout_padding">
         <div class="container  ">
 
             <div class="row">
@@ -21,8 +21,8 @@
                         <p>
                             @item.Description
                         </p>
-                        <a href="/About/Index/">
-                            Daha Fazlasını Görün
+                        <a href="/Menu/Index/">
+                            Hemen Sipariş Verin
                         </a>
                     </div>
                 </div>
