--- a/CoffyWebUI/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
+++ b/CoffyWebUI/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
@@ -6,7 +6,7 @@
     <header class="header_section">
         <div class="container">
             <nav class="navbar navbar-expand-lg custom_nav-container ">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="/Default/Index/">
                     <span>
                         CoffyCof
                     </span>
@@ -18,16 +18,16 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav  mx-auto ">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/Default/Index/">Anasayfa</a>
+                        <li class="nav-item active">
+                            <a class="nav-link " href="/Default/Index/">Anasayfa</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/Menu/Index/">Menü</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/AboutUI/Index/">Hakkımızda</a>
+                            <a class="nav-link" href="/Default/Index#about">Hakkımızda</a>
                         </li>
-                        <li class="nav-item active">
+                        <li class="nav-item ">
                             <a class="nav-link" href="/BookATable/Index/">Rezervasyon Yap <span class="sr-only">(current)</span> </a>
                         </li>
                     </ul>
