ana sayfa mesaj gönderme kısmı ekleme

--- a/CoffyWebUI/Views/_ViewImports.cshtml
+++ b/CoffyWebUI/Views/_ViewImports.cshtml
@@ -14,5 +14,6 @@
 @using CoffyWebUI.Dtos.NotificationDtos
 @using CoffyWebUI.Dtos.MenuTableDtos
 @using CoffyWebUI.Dtos.IdentityDtos
+@using CoffyWebUI.Dtos.MessageDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
