sosyal medya kısmının düzenlenmesi eksikleri giderildi
yeni sütun eklendi. hata çözüldü . footer yapısı değişti

--- a/CoffyWebUI/Views/SocialMedia/CreateSocialMedia.cshtml
+++ b/CoffyWebUI/Views/SocialMedia/CreateSocialMedia.cshtml
@@ -27,6 +27,12 @@
 								<input type="text" class="form-control" asp-for="Url" id="Url">
 							</div>
 						</div>
+						<div class="card-body">
+							<div class="form-group">
+								<label for="Icon">ikon giriniz</label>
+								<input type="text" class="form-control" asp-for="Icon" id="Icon">
+							</div>
+						</div>
 						<div class="card-action">
 							<button class="btn btn-primary">sosyal medya hesabını ekle</button>
 						</div>
