--- a/CoffyWebUI/Views/SocialMedia/Index.cshtml
+++ b/CoffyWebUI/Views/SocialMedia/Index.cshtml
@@ -24,6 +24,7 @@
 									<th scope="col">#</th>
 									<th scope="col">Başlık</th>
 									<th scope="col">Link</th>
+									<th scope="col">İkon</th>
 									<th scope="col">Sil</th>
 									<th scope="col">Güncelle</th>
 								</tr>
@@ -36,8 +37,9 @@
 										<th>@count</th>
 										<td>@item.Title</td>
 										<td>@item.Url</td>
-										<td><a href="/SocialMedia/DeleteSocialMedia/@item.SocialMediaID" class=btn btn-outline-danger>Sil</a></td>
-										<td><a href="/SocialMedia/UpdateSocialMedia/@item.SocialMediaID" class=btn btn-outline-success>Güncelle</a></td>
+										<td>@item.Icon</td>
+										<td><a href="/SocialMedia/DeleteSocialMedia/@item.SocialMediaID" class="btn btn-outline-danger">Sil</a></td>
+										<td><a href="/SocialMedia/UpdateSocialMedia/@item.SocialMediaID" class="btn btn-outline-success">Güncelle</a></td>
 									</tr>
 								}
 
