--- a/CoffyWebUI/Views/SocialMedia/UpdateSocialMedia.cshtml
+++ b/CoffyWebUI/Views/SocialMedia/UpdateSocialMedia.cshtml
@@ -28,6 +28,12 @@
 								<input type="text" class="form-control" asp-for="Url" id="Url">
 							</div>
 						</div>
+						<div class="card-body">
+							<div class="form-group">
+								<label for="Icon">İkon giriniz</label>
+								<input type="text" class="form-control" asp-for="Icon" id="Icon">
+							</div>
+						</div>
 						<div class="card-action">
 							<button class="btn btn-primary">sosyal medya hesabını Güncelle</button>
 						</div>
