--- a/CoffyWebUI/Views/Baskets/Index.cshtml
+++ b/CoffyWebUI/Views/Baskets/Index.cshtml
@@ -5,6 +5,7 @@
     decimal basketTotalPrice=0;
     decimal basketTotalPriceWithTax = 0;
     decimal tax = 0;
+    decimal totalpricewithcount = 0;
 }
 
 
@@ -44,19 +45,23 @@
                             <th>Sil</th>
                         </tr>
                     </thead>
-                    @foreach(var item in Model)
+                    @foreach(var group in Model.GroupBy(x=>x.ProductName))
                     {
+                        var item = group.First();
+                        var itemcount = group.Count();
                         basketTotalPrice = Model.Sum(x => x.Price);
                         tax = basketTotalPrice / 100 * 10;
                         basketTotalPriceWithTax = basketTotalPrice + tax;
                         count++;
+
+                        totalpricewithcount = item.Price * itemcount;
                         <tbody class="align-middle">
                             <tr>
                                 <td class="align-middle">@count</td>
                                 <td class="align-middle">@item.ProductName</td>
-                                <td class="align-middle">@item.Count</td>
+                                <td class="align-middle">@itemcount</td>
                                 <td class="align-middle">@item.Price</td>
-                                <td class="align-middle">@item.TotalPrice</td>
+                                <td class="align-middle">@totalpricewithcount</td>
                                 <td class="align-middle btn-delete"><a class="btn btn-sm btn-danger" href="/Baskets/DeleteBasket/@item.BasketID"><i class="fa fa-times" ></i></a></td>
                             </tr>
                         </tbody>
