--- a/CoffyWebUI/Views/Menu/Index.cshtml
+++ b/CoffyWebUI/Views/Menu/Index.cshtml
@@ -122,8 +122,8 @@
                 </div>
             </div>
             <div class="btn-box">
-                <a href="">
-                    Tümünü Gör
+                <a href="/Baskets/Index/">
+                    Sepete Git
                 </a>
             </div>
         </div>
