ayarlarda bilgi güncelleme. mail gönderme kısmı

--- a/CoffyWebUI/Views/_ViewImports.cshtml
+++ b/CoffyWebUI/Views/_ViewImports.cshtml
@@ -15,5 +15,6 @@
 @using CoffyWebUI.Dtos.MenuTableDtos
 @using CoffyWebUI.Dtos.IdentityDtos
 @using CoffyWebUI.Dtos.MessageDtos
+@using CoffyWebUI.Dtos.MailDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
