--- a/CoffyWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
+++ b/CoffyWebUI/Views/Shared/Components/_LayoutSidebarComponentPartial/Default.cshtml
@@ -38,10 +38,9 @@
 
 		<ul class="nav">
 			<li class="nav-item">
-				<a href="/Dashboard/Index/">
+				<a href="/Default/Index/">
 					<i class="la la-motorcycle"></i>
 					<p>Siteye Git</p>
-					<span class="badge badge-count">0</span>
 				</a>
 			</li>
 			<li class="nav-item">
@@ -174,6 +173,18 @@
 				</a>
 			</li>
 			<li class="nav-item">
+				<a href="/Mail/Index/">
+					<i class="la la-anchor"></i>
+					<p>Mail İşlemleri </p>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="/QRCode/Index/">
+					<i class="la la-qrcode"></i>
+					<p>QR Kod OLuşturma Sayfası</p>
+				</a>
+			</li>
+			<li class="nav-item">
 				<a href="/Setting/Index/">
 					<i class="la la-chain"></i>
 					<p>Ayarlar </p>
@@ -181,7 +192,7 @@
 			</li>
 			<li class="nav-item">
 				<a href="/Login/LogOut/">
-					<i class="la la-expeditedssl"></i>
+					<i class="la la-plane"></i>
 					<p>Çıkış Yap </p>
 				</a>
 			</li>
