--- a/CoffyWebUI/Views/ProgressBars/Index.cshtml
+++ b/CoffyWebUI/Views/ProgressBars/Index.cshtml
@@ -174,7 +174,7 @@
 					<div class="col-md-3">
 						<div class="card card-stats">
 							<div class="card-body">
-								<p class="fw-bold mt-1">İstatistikler</p>
+								<p class="fw-bold mt-1">Anlık İstatistikler</p>
 								<div class="row">
 									<div class="col-5">
 										<div class="icon-big text-center icon-warning">
