--- a/CoffyWebUI/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
+++ b/CoffyWebUI/Views/Shared/Components/_UILayoutNavbarComponentPartial/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="hero_area">
     <div class="bg-box">
-        <img src="~/feane-1.0.0/images/hero-bg.jpg" alt="">
+        <img src="~/feane-1.0.0/images/koyu_tema_sade_kahve.jpg" alt="">
     </div>
     <!-- header section strats -->
     <header class="header_section">
