--- a/CoffyWebUI/Views/Shared/Components/_LayoutNavbarComponentPartial/Default.cshtml
+++ b/CoffyWebUI/Views/Shared/Components/_LayoutNavbarComponentPartial/Default.cshtml
@@ -1,4 +1,5 @@
-﻿<script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
+﻿
+<script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
@@ -97,7 +98,7 @@
 							</div>
 						</li>
 						<li>
-							<a class="see-all" href="javascript:void(0);"> <strong>See all notifications</strong> <i class="la la-angle-right"></i> </a>
+							<a class="see-all" href="/Notifications/Index/"> <strong>Tüm Bildirimleri Gör</strong> <i class="la la-angle-right"></i> </a>
 						</li>
 					</ul>
 				</li>
@@ -109,18 +110,17 @@
 								<div class="u-img"><img src="~/Ready-Bootstrap-Dashboard-master/assets/img/profile.jpg" alt="user"></div>
 								<div class="u-text">
 									<h4>Admin</h4>
-									<p class="text-muted">CoffeeOrder@gmail.com</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">Menüyü Gör</a>
+									<p class="text-muted">CoffeeOrder@gmail.com</p><a href="/Menu/Index/" class="btn btn-rounded btn-danger btn-sm">Menüyü Gör</a>
 								</div>
 							</div>
 						</li>
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#"><i class="ti-user"></i> Menü</a>
-						<a class="dropdown-item" href="#"></i> Ayarlar</a>
-						<a class="dropdown-item" href="#"><i class="ti-email"></i> Rezervasyonlar</a>
+						<a class="dropdown-item" href="/Menu/Index/"><i class="ti-user"></i> Menü</a>
+						<a class="dropdown-item" href="/Setting/Index/"></i> Ayarlar</a>
+						<a class="dropdown-item" href="/Booking/Index/"><i class="ti-email"></i> Rezervasyonlar</a>
+						
 						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#"><i class="ti-settings"></i> Dashboard</a>
-						<div class="dropdown-divider"></div>
-						<a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Çıkış Yap</a>
+						<a class="dropdown-item" href="/Login/LogOut/"><i class="fa fa-power-off"></i> Çıkış Yap</a>
 					</ul>
 					<!-- /.dropdown-user -->
 				</li>
