--- a/CoffyWebUI/Views/_ViewImports.cshtml
+++ b/CoffyWebUI/Views/_ViewImports.cshtml
@@ -16,5 +16,6 @@
 @using CoffyWebUI.Dtos.IdentityDtos
 @using CoffyWebUI.Dtos.MessageDtos
 @using CoffyWebUI.Dtos.MailDtos
+@using CoffyWebUI.Dtos.RapidApiDtos
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
