--- a/CoffyWebUI/Views/Menu/Index.cshtml
+++ b/CoffyWebUI/Views/Menu/Index.cshtml
@@ -61,7 +61,7 @@
                                             <h6>
                                                 @item.Price₺
                                             </h6>
-                                            <a href="#" onclick="showproductid(@item.ProductID)">
+                                            <a href="#" onclick="showproductid(@item.ProductID,@ViewBag.v)">
 
 
                                                 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -117,6 +117,7 @@
                                         </g>
                                       </svg>
                                             </a>
+
                                         </div>
                                     </div>
                                 </div>
@@ -127,7 +128,7 @@
             </div>
             <div class="btn-box">
                 <a href="/Baskets/Index/">
-                    Sepete Git
+                    Sepete Git(@ViewBag.v)
                 </a>
             </div>
         </div>
@@ -138,19 +139,23 @@
     @await Component.InvokeAsync("_UILayoutScriptComponentPartial")
 
     <script>
-        function showproductid(value){
-               var id= value; 
+        function showproductid(productId,menuTableId){  
                $.ajax({
-                   type:'post',
-                   data: {item: id},
-                   url:"/Menu/AddBasket/" + id,
-                   contentType:'json',
+                   type:'POST',
+                   url:"/Menu/AddBasket/",
+                   data: {
+                       id: productId,
+                       menuTableId:menuTableId
+                   },
                    success: function () {
-                           swal("Seçilen Ürün ID:" + id, "Seçtiğiniz Ürün Sepete Eklendi!", "success");
-
-                   }
+                    swal("Seçilen Ürün ID:" + productId, "Seçtiğiniz Ürün Sepete Eklendi!", "success");
+                },
+                error: function (xhr, status, error) {
+                    console.error("Hata:", error);
+                    console.log("Yanıt:", xhr.responseText);
+                }
                });
-        }
+        };
 
     </script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
